# routes/index.js
@@ -6,7 +6,9 @@ const passport = require("passport");
 router.use('/', require('./swagger'));
 
 router.use('/users', require('./users'));
-router.use("/activities", require("./activities"));
+router.use("/movies", require("./movies"));
+router.use("/genres", require("./genres"));
+router.use("/reviews", require("./reviews"));
 
 router.get("/login", passport.authenticate('github'), (req, res) => {});
 
